--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "angular-imask": "^6.0.5",
+    "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^5.0.0-beta1",
+    "bootstrap-icons": "^1.3.0",
+    "chart.js": "^2.9.4",
+    "currency-formatter": "^1.5.6",
+    "jquery": "^3.5.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
