--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "bootstrap-icons": "^1.3.0",
     "chart.js": "^2.9.4",
     "currency-formatter": "^1.5.6",
-    "jquery": "^3.5.1",
     "primeicons": "^4.1.0",
     "primeng": "^11.2.0",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
+    "toastr": "^2.1.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
